# RobocupSSL_LL

./: .gitignore  README.md  unzip_C2000_include.sh
C2000RadioBase/: .ccsproject  .project  Robocup_Define_RadioBase.h  SPI.h  USB_driver.c  app.cfg  circularBuffer.c  circularBuffer.h  main.c  makefile.defs  nRF24L01_driver.c  sci.c  sci.h  testTool.c  unpacker.h
C2000Robot/: .cproject  .project  ADCSensorProx.c  ADCSensorProx.h  CS_demux.h  DCMotor_driver.c  DCMotor_driver.h  L3GD20_driver.c  L3GD20_driver.h  LSM9DS0_driver.c  LSM9DS0_driver.h  Robocup_Define.h  SPI.h  Serial.c  app.cfg  arduino_driver.c  arduino_driver.h  four_wheel_ctrl.c  four_wheel_ctrl.h  kicker.c  kicker.h  main.c  makefile.defs  nRF24L01_driver.c  nRF24L01_driver.h  pid.c  quad_driver.c  quad_driver.h  radio_unpacker.c  radio_unpacker.h  testTool.c  testTool.h
DebugTools/: CMakeLists.txt  main.cpp
DebugTools/Arduino/BaseRadioArduino/: serial_command_sender.py
DebugTools/Arduino/BaseRadioArduino/BaseRadio/: BaseRadio.ino
DebugTools/Arduino/pingpair_ack_robot/: pingpair_ack_robot.ino
DebugTools/Arduino/pingpair_ack_robot_sender/: pingpair_ack_robot_sender.ino
DebugTools/JoystickDriver/: Serial.cpp  Serial.h  joystick.layout  main.cpp  packer.cpp  syn_serial.h
DebugTools/USBDebug/: Serial.cpp  Serial.h  command.cpp  command.h
JoystickDriver/: joystick.cbp  joystick.depend  joystick.layout  packer.cpp  packer.h  syn_serial.cpp
RobocupV2_1/: .ccsproject  .cproject  .gitignore  .project  CS_demux.c  L3GD20_driver.h  Robocup_Define.h  SPI.c  SPI.h  arduino_driver.c  arduino_driver.h  (+9 more)
(+74 files in other folders)
